Bug 1689741 - not controlling the real-time media via the media control. r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D112668